workshop/capstone/my-api/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-api
  labels:
    app: my-api
spec:
  ingressClassName: nginx
  rules:
  - host: my-api.127.0.0.1.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-api
            port:
              number: 8000
